Rails 5, no magick_columns, enter validates_email_format_of

--- a/config/locales/application.es.yml
+++ b/config/locales/application.es.yml
@@ -240,6 +240,10 @@
           attributes:
             base:
               invalid_answer: 'Debe elegir una opción o contestar'
+        user:
+          attributes:
+            email:
+              invalid_email_address: 'no es válido'
 
   date:
     formats:
